# openfmb-rs

./: .gitignore  Cargo.toml  README.md
.reuse/: dep5
examples/: capbank_client.rs  (+15 more)
microgrid-protobuf/: Cargo.toml  build.rs
microgrid-protobuf/src/: lib.rs  microgrid.proto
openfmb-codegen/: Cargo.toml  README.md
openfmb-codegen/proto-types/: Cargo.toml
openfmb-codegen/proto-types/src/: protobuf.rs
openfmb-codegen/src/: ast.rs  code_generator.rs  extern_paths.rs  goodbye.proto  hello.proto  ident.rs  lib.rs  message_graph.rs  message_inheritance.rs  smoke_test.proto  types.proto  util.rs
openfmb-derive/: Cargo.toml
openfmb-derive/src/: lib.rs
openfmb-derive/tests/: 01-simple.rs  02-prost-opt.rs
openfmb-descriptors/: .gitignore  Cargo.toml  README.md  build.rs
openfmb-descriptors/examples/: traversal.rs
openfmb-descriptors/proto/: uml.proto
openfmb-descriptors/proto/breakermodule/: breakermodule.proto
openfmb-descriptors/proto/capbankmodule/: capbankmodule.proto
openfmb-descriptors/proto/circuitsegmentservicemodule/: circuitsegmentservicemodule.proto
openfmb-descriptors/proto/commonmodule/: commonmodule.proto
openfmb-descriptors/proto/coordinationservicemodule/: coordinationservicemodule.proto
openfmb-descriptors/proto/environmentmodule/: environmentmodule.proto
openfmb-descriptors/proto/essmodule/: essmodule.proto
openfmb-descriptors/proto/evsemodule/: evsemodule.proto
openfmb-descriptors/proto/generationmodule/: generationmodule.proto
openfmb-descriptors/proto/interconnectionmodule/: interconnectionmodule.proto
openfmb-descriptors/proto/loadforecastmodule/: loadforecastmodule.proto
openfmb-descriptors/proto/loadmodule/: loadmodule.proto
openfmb-descriptors/proto/metermodule/: metermodule.proto
openfmb-descriptors/proto/priceforecastmodule/: priceforecastmodule.proto
openfmb-descriptors/proto/reclosermodule/: reclosermodule.proto
openfmb-descriptors/proto/regulatormodule/: regulatormodule.proto
openfmb-descriptors/proto/reservemodule/: reservemodule.proto
openfmb-descriptors/proto/resourcemodule/: resourcemodule.proto
openfmb-descriptors/proto/solarforecastmodule/: solarforecastmodule.proto
openfmb-descriptors/proto/solarmodule/: solarmodule.proto
openfmb-descriptors/proto/switchmodule/: switchmodule.proto
openfmb-descriptors/src/: README.md  lib.rs
openfmb-messages/: Cargo.toml  build.rs
openfmb-messages-ext/: .gitignore  Cargo.toml
openfmb-messages-ext/src/: common.rs  error.rs  lib.rs  utils.rs
openfmb-messages-ext/src/breaker/: control.rs  event.rs  mod.rs  reading.rs  status.rs
openfmb-messages-ext/src/capbank/: control.rs  discretecontrol.rs  event.rs  mod.rs  reading.rs  status.rs
openfmb-messages-ext/src/circuitsegementservice/: control.rs  event.rs  status.rs
openfmb-messages-ext/src/circuitsegmentservice/: control.rs  status.rs
openfmb-messages-ext/src/coordinationservice/: control.rs  event.rs  mod.rs  status.rs
openfmb-messages-ext/src/environment/: mod.rs  reading.rs
openfmb-messages-ext/src/ess/: capability.rs  capabilityoverride.rs  control.rs  discretecontrol.rs  event.rs  mod.rs  reading.rs  status.rs
openfmb-messages-ext/src/evse/: capability.rs  capabilityoverride.rs  control.rs  discretecontrol.rs  event.rs  reading.rs  status.rs
openfmb-messages-ext/src/generation/: capability.rs  capabilityoverride.rs  control.rs  discretecontrol.rs  event.rs  mod.rs  reading.rs  status.rs
openfmb-messages-ext/src/interconnection/: mod.rs  planned_schedule.rs  requested_schedule.rs
openfmb-messages-ext/src/load/: control.rs  event.rs  mod.rs  reading.rs  status.rs
openfmb-messages-ext/src/loadforecast/: forecast.rs  mod.rs
openfmb-messages-ext/src/meter/: mod.rs  reading.rs
openfmb-messages-ext/src/priceforecast/: forecast.rs
openfmb-messages-ext/src/recloser/: control.rs  event.rs  mod.rs  reading.rs  status.rs
openfmb-messages-ext/src/regulator/: control.rs  discretecontrol.rs  event.rs  mod.rs  reading.rs  status.rs
openfmb-messages-ext/src/reserve/: availability.rs  mod.rs  request.rs
openfmb-messages-ext/src/resource/: control.rs  event.rs  mod.rs  reading.rs  status.rs
openfmb-messages-ext/src/solar/: capability.rs  capabilityoverride.rs  control.rs  discretecontrol.rs  event.rs  reading.rs  status.rs
openfmb-messages-ext/src/solarforecast/: forecast.rs
openfmb-messages-ext/src/switch/: control.rs  event.rs  reading.rs  status.rs
openfmb-messages-ext/tests/: nats_test.rs
openfmb-messages/proto/: uml.proto
openfmb-messages/proto/breakermodule/: breakermodule.proto
openfmb-messages/proto/capbankmodule/: capbankmodule.proto
openfmb-messages/proto/commonmodule/: commonmodule.proto
openfmb-messages/proto/coordinationservicemodule/: coordinationservicemodule.proto
openfmb-messages/proto/essmodule/: essmodule.proto
openfmb-messages/proto/generationmodule/: generationmodule.proto
openfmb-messages/proto/interconnectionmodule/: interconnectionmodule.proto
openfmb-messages/proto/loadmodule/: loadmodule.proto
openfmb-messages/proto/metermodule/: metermodule.proto
openfmb-messages/proto/optimizermodule/: optimizermodule.proto
openfmb-messages/proto/reclosermodule/: reclosermodule.proto
openfmb-messages/proto/regulatormodule/: regulatormodule.proto
openfmb-messages/proto/reservemodule/: reservemodule.proto
openfmb-messages/proto/resourcemodule/: resourcemodule.proto
openfmb-messages/src/: breakermodule.rs  capbankmodule.rs  circuitsegmentservicemodule.rs  commonmodule.rs  coordinationservicemodule.rs  environmentmodule.rs  essmodule.rs  evsemodule.rs  generationmodule.rs  google.protobuf.rs  interconnectionmodule.rs  lib.rs  loadforecastmodule.rs  loadmodule.rs  metermodule.rs  optimizermodule.rs  priceforecastmodule.rs  profiles.rs  reclosermodule.rs  regulatormodule.rs  reservemodule.rs  resourcemodule.rs  solarforecastmodule.rs  solarmodule.rs  switchmodule.rs  uml.rs  variant.rs
openfmb-messages/tests/: inheritance.rs  optional_accessor.rs
proto-types/: Cargo.toml  README.md
proto-types/src/: compiler.rs  lib.rs  protobuf.rs
(+65 files in other folders)
