[package]
name = "openfmb"
version = "0.1.0"
authors = ["Tom Burdick <tom@openenergysolutionsinc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4"
futures = "0.3"
bytes = "0.5"
async-trait = "0.1"
chrono = "0.4"
uuid = "0.8"
prost = "0.6"

# messages
openfmb-messages = { path = "./openfmb-messages" }
openfmb-messages-ext = { path = "./openfmb-messages-ext" }

# nats optional dep
nats = {version = "0.7", optional = true}

[features]
default = ["nats"]

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
loom = "0.3"
pretty_env_logger = "0.4"
