# SPDX-FileCopyrightText: 2021 Open Energy Solutions Inc
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openfmb"
version = "0.1.0"
authors = ["Tom Burdick <tom@openenergysolutionsinc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4"
futures = "0.3"
bytes = "1"
async-trait = "0.1"
chrono = "0.4"
uuid = "0.8"
prost = "0.7"
lazy_static = "1.4"

# messages
openfmb-messages = { path = "./openfmb-messages" }
openfmb-messages-ext = { path = "./openfmb-messages-ext", optional = true }

# nats bus support
nats = {version = "0.8", optional = true}

# zenoh bus support
zenoh = {git = "https://github.com/eclipse-zenoh/zenoh.git", rev = "000a2ba4681c49fe55fd42bafa5f4b8996c57cd7", optional = true}

[features]
client = ["openfmb-messages-ext"]
default = ["nats"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
pretty_env_logger = "0.4"

[[example]]
name = "switch_client"
required-features = ["client", "zenoh"]
