# SPDX-FileCopyrightText: 2021 Open Energy Solutions Inc
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openfmb"
version = "0.2.0"
authors = ["Tom Burdick <tom@openenergysolutionsinc.com>"]
edition = "2018"
description = "An Open Field Message Bus crate for Rust"
license = "Apache-2.0"
homepage = "https://github.com/openenergysolutions/openfmb-rs"
repository = "https://github.com/openenergysolutions/openfmb-rs"
readme = "README.md"
keywords = ["openfmb", "interoperability", "di", "renewable-energy"]
categories = ["distributed-automation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4"
futures = "0.3"
bytes = "1"
async-trait = "0.1"
chrono = "0.4.10"
uuid = "1.1.2"
prost = "0.10.4"
lazy_static = "1.4"

# messages
openfmb-messages = { version = "2.1.0", path = "./openfmb-messages" }
openfmb-messages-ext = { version = "2.1.0", path = "./openfmb-messages-ext", optional = true }

# nats bus support
async-nats = {version = "0.29.0", optional = true}
nats = {version = "0.24.0", optional = true}

# zenoh bus support
zenoh = {git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "branch_0.5.0-beta.9", optional = true}

[features]
client = ["openfmb-messages-ext"]
nats-sync = ["nats"]
nats-async = ["async-nats"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
pretty_env_logger = "0.5"

[[example]]
name = "switch_client"
required-features = ["nats-sync", "client", "zenoh"]

[[example]]
name = "switch_client_async_nats"
required-features = ["nats-async", "client"]

[[example]]
name = "switch_device"
required-features = ["nats-sync", "client"]

[[example]]
name = "logger"
required-features = ["nats-sync"]
