[package]
name = "microgrid-protobuf"
version = "0.1.0"
authors = ["Tom Burdick <tom@openenergysolutions.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7"

[build-dependencies]
prost-build = { version = "0.7" }

