[package]
name = "openfmb-derive"
version = "0.1.0"
authors = ["Tom Burdick <tom@openenergysolutionsinc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = ["extra-traits"] }
proc-macro2 = "1"
quote = "1"
heck = "0.3"

[lib]
proc-macro = true

[dev-dependencies]
prost = "0.6"
prost-types = "0.6"
trybuild = "1"
lazy_static = "1.4"
