# SPDX-FileCopyrightText: 2021 Open Energy Solutions Inc
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openfmb-descriptors"
version = "0.1.0"
authors = ["Tom Burdick <thomas.burdick@gmail.com>"]
edition = "2018"
exclude = ["proto", "third-party"]

[build-dependencies]
which = { version = "4", default-features = false  }

[dependencies]
prost = "0.7"
proto-types = { version = "0.7", path = "../proto-types" }
lazy_static = "1.4"
