# SPDX-FileCopyrightText: 2021 Open Energy Solutions Inc
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openfmb-descriptors"
version = "0.1.0"
authors = ["Tom Burdick <thomas.burdick@gmail.com>"]
edition = "2018"
exclude = ["proto", "third-party"]
description = "An OpenFM Message Descriptors crate for Rust"
license = "Apache-2.0"
homepage = "https://github.com/openenergysolutions/openfmb-rs"
repository = "https://github.com/openenergysolutions/openfmb-rs"
readme = "README.md"
keywords = ["openfmb", "interoperability", "di", "renewable-energy"]
categories = ["distributed-automation"]

[build-dependencies]
which = { version = "3", default-features = false  }

[dependencies]
prost = "0.13"
proto-types = { version = "0.7", path = "../proto-types" }
lazy_static = "1.4"
