# SPDX-FileCopyrightText: 2021 Open Energy Solutions Inc
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openfmb-messages-ext"
version = "0.0.1"
authors = ["Tupshin Harper <tupshin@openenergysolutionsinc.com>", "Tom Burdick <tom@openenergysolutionsinc.com>"]
edition = "2018"

[dependencies]
openfmb-messages = { path = "../openfmb-messages"}
log = "0.4.8"
uuid =  { version = "1.1.2", features = ["serde", "v4"] }
snafu = "0.6.6"
chrono = "0.4.19"
prost = "0.10.4"
nats = "0.20.1"
serde = {version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "prepush-hook", "run-cargo-check", "run-cargo-fmt", "run-cargo-clippy"]
