# SPDX-FileCopyrightText: 2021 Open Energy Solutions Inc
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openfmb-messages-ext"
version = "2.2.0"
authors = ["Tupshin Harper <tupshin@openenergysolutionsinc.com>", "Tom Burdick <tom@openenergysolutionsinc.com>"]
edition = "2018"
description = "An OpenFMB Message Extensions crate for Rust"
license = "Apache-2.0"
homepage = "https://github.com/openenergysolutions/openfmb-rs"
repository = "https://github.com/openenergysolutions/openfmb-rs"
readme = "README.md"
keywords = ["openfmb", "interoperability", "di", "renewable-energy"]
categories = ["distributed-automation"]

[dependencies]
openfmb-messages = { path = "../openfmb-messages"}
log = "0.4.8"
uuid =  { version = "1.1.2", features = ["serde", "v4"] }
snafu = "0.6.6"
chrono = "0.4.26"
prost = "0.13"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["rt-multi-thread"] }
futures = { version = "0.3.26", default-features = false, features = ["std", "async-await"] }
