[package]
name = "openfmb-messages"
version = "0.1.0"
authors = ["Tom Burdick <tom@openenergysolutionsinc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
bytes = "0.5"
serde = { version = "1", features = ["derive"] }
prost = "0.6.1"
prost-derive = "0.6.1"
prost-types = "0.6.1"

[build-dependencies]
openfmb-codegen  = { path = "../openfmb-codegen" }
env_logger = "0.8"
