# SPDX-FileCopyrightText: 2021 Open Energy Solutions Inc
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openfmb-messages"
version = "2.1.0"
authors = ["Tom Burdick"]
edition = "2018"
description = "An Open Field Message Bus crate for Rust"
license = "Apache-2.0"
homepage = "https://github.com/openenergysolutions/openfmb-rs"
repository = "https://github.com/openenergysolutions/openfmb-rs"
readme = "README.md"
keywords = ["openfmb", "interoperability", "di", "renewable-energy"]
categories = ["distributed-automation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
bytes = "1"
serde = { version = "1", features = ["derive"] }
prost = "0.10.4"
prost-derive = "0.10.1"

[build-dependencies]
openfmb-codegen  = { path = "../openfmb-codegen" }
env_logger = "0.9.0"
