# SPDX-FileCopyrightText: 2021 Open Energy Solutions Inc
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "proto-types"
version = "0.7.0"
authors = ["Dan Burkert <dan@danburkert.com>"]
license = "Apache-2.0"
repository = "https://github.com/danburkert/prost"
documentation = "https://docs.rs/prost-types"
readme = "README.md"
description = "A Protocol Buffers implementation for the Rust Language."
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
bytes = "1"
prost = "0.10.4"

